# Order-Flow-Predictor

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run-ci-local.sh  setup.cfg
.github/: CI_STATUS.md  labeler.yml  pull_request_template.md
.github/scripts/: check-ci.sh
.github/workflows/: ci.yml  labeler.yml  pr-check.yml
config/: config.example.py  default_config.yml
docker/: cpp.Dockerfile  ml.Dockerfile
scripts/: create-labels.ps1  create-labels.sh  run-ci-local.ps1
src/cpp/: CMakeLists.txt  black_scholes.cpp  main.cpp  order_flow_predictor.cpp
src/cpp/include/: black_scholes.hpp  neural_network.hpp  order_flow_predictor.hpp  order_flow_types.hpp
src/cpp/utils/: order_flow_utils.hpp
src/python/: __init__.py
src/python/features/: feature_engineering.py
src/python/order_flow_predictor/: __init__.py  constants.py  predictor.py
src/python/utils/: evaluation.py
src/utils/: config.py  evaluation.py  logging_config.py
tests/: conftest.py  test_basic.py
