[tool.poetry]
name = "order-flow-predictor"
version = "0.1.0"
description = "Machine Learning project for predicting order flow"
authors = ["Alex-Sebastian-Ene"]
packages = [
    { include = "order_flow_predictor", from = "src/python" }
]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.0"
pandas = "^2.1.1"
scikit-learn = "^1.3.1"
torch = "^2.1.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
jupyter = "^1.0.0"
jupyterlab = "^4.0.6"
ipykernel = "^6.25.2"
PyYAML = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"
pytest-asyncio = "^0.21.1"
types-PyYAML = "^6.0.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "src/python/__init__.py",
    "src/__init__.py"
]

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true
